--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,20 @@
 ---
-
+import Layout from '../layouts/Layout.astro';
+import Navigation from '../components/Navigation.astro';
+import Hero from '../components/Hero.astro';
+import About from '../components/About.astro';
+import Services from '../components/Services.astro';
+import Testimonial from '../components/Testimonial.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="MMC - 专业利润预算管理解决方案" description="MMC致力于为企业提供专业的利润预算管理系统，帮助企业实现收入利润双增长。18年专业认证，500+跨行业案例，30%+利润提升。">
+	<Navigation />
+	<main>
+		<Hero />
+		<About />
+		<Services />
+		<Testimonial />
+	</main>
+	<Footer />
+</Layout>
