--- a/src/components/AboutBanner.astro
+++ b/src/components/AboutBanner.astro
@@ -14,7 +14,7 @@ const bannerData = {
 
 {bannerData.enable && (
   <section class="bg-white pt-20 md:pt-24">
-    <div class="container mx-auto px-4 py-4 md:py-8">
+    <div class="container py-4 md:py-8">
       {/* Text Section - Responsive layout */}
       <div class="flex flex-col lg:flex-row items-start lg:items-center justify-between gap-6 lg:gap-8 lg:min-h-[300px]">
         <div class="flex-1 max-w-2xl lg:flex lg:items-center">
