--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,7 +12,7 @@ import CallToAction from '../components/CallToAction.astro';
   <main class="min-h-screen bg-white">
     <!-- Contact Section -->
     <section class="relative pt-32 pb-20">
-      <div class="container mx-auto px-4">
+      <div class="container">
         <div class="flex flex-wrap items-start justify-between gap-x-20 gap-y-6 lg:flex-nowrap">
           <!-- Left Side - Contact Information -->
           <div class="lg:sticky lg:top-32 lg:max-w-lg">
