Update services pages and components - modified service pages, removed unused services, updated HowItWorks and Services components

--- a/src/components/HowItWorks.astro
+++ b/src/components/HowItWorks.astro
@@ -104,13 +104,13 @@ const howItWorksData = {
                 ${index % 2 === 0 ? 'order-2' : 'order-2 lg:order-1'}
               `}>
                 {/* Step Background Pattern */}
-                <div class="absolute inset-0 opacity-50">
+                {/* <div class="absolute inset-0 opacity-50">
                   <img
                     class="h-full w-full object-cover"
                     src="/images/how-it-works/how-it-work-curl.svg"
                     alt="step pattern"
                   />
-                </div>
+                </div> */}
                 <img
                   class="translate-centered absolute h-full w-full object-contain z-10"
                   src={item.image}
