--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -28,13 +28,13 @@ import "swiper/css/bundle";
             <div class="flex gap-4">
               <!-- Slider Controls -->
               <button class="services-slider-btn-prev bg-secondary hover:bg-primary group/slider-control relative flex h-14 w-14 items-center justify-center rounded-full transition duration-300">
-                <svg class="text-primary group-hover/slider-control:text-secondary absolute left-1/3 h-10 w-14 transition duration-300 group-hover/slider-control:-translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <svg class="text-primary group-hover/slider-control:text-secondary h-6 w-6 transition duration-300 group-hover/slider-control:-translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
                 </svg>
               </button>
-              <button class="services-slider-btn-next bg-secondary hover:bg-primary group/slider-control relative flex h-14 w-14 rotate-180 items-center justify-center rounded-full transition duration-300">
-                <svg class="text-primary group-hover/slider-control:text-secondary absolute left-1/3 h-10 w-14 transition duration-300 group-hover/slider-control:-translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+              <button class="services-slider-btn-next bg-secondary hover:bg-primary group/slider-control relative flex h-14 w-14 items-center justify-center rounded-full transition duration-300">
+                <svg class="text-primary group-hover/slider-control:text-secondary h-6 w-6 transition duration-300 group-hover/slider-control:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                 </svg>
               </button>
               
