--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,6 +13,7 @@
       <ul class="nav-menu" id="nav-menu">
         <li><a href="/">首页</a></li>
         <li><a href="/about">关于我们</a></li>
+        <li><a href="/team">团队介绍</a></li>
         <li><a href="/services">服务</a></li>
         <li><a href="/contact">联系我们</a></li>
       </ul>
