--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,7 +6,7 @@ import Social from '../components/Social.astro';
 import CallToAction from '../components/CallToAction.astro';
 ---
 
-<Layout title="联系我们 - MMC">
+<Layout title="联系我们 - MMC Financial" description="联系MMC Financial获取专业的利润预算管理服务。电话：+6011-27368039，邮箱：admin@mmcfin.com，地址：吉隆坡TRX Exchange 106。">
   <Navigation />
   
   <main class="min-h-screen bg-white">
