--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,19 +3,19 @@ import Layout from '../layouts/Layout.astro';
 import Navigation from '../components/Navigation.astro';
 import Hero from '../components/Hero.astro';
 import Customers from '../components/Customers.astro';
-import About from '../components/About.astro';
+import HomeAbout from '../components/HomeAbout.astro';
 import Services from '../components/Services.astro';
 import HowItWorks from '../components/HowItWorks.astro';
 import Testimonial from '../components/Testimonial.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="MMC - 专业利润预算管理解决方案" description="MMC致力于为企业提供专业的利润预算管理系统，帮助企业实现收入利润双增长。18年专业认证，500+跨行业案例，30%+利润提升。">
+<Layout title="MMC Financial - 专业利润预算管理解决方案" description="MMC Financial致力于为企业提供专业的利润预算管理系统，帮助企业实现收入利润双增长。18年专业认证，500+跨行业案例，30%+利润提升。">
 	<Navigation />
 	<main>
 		<Hero />
 		<Customers />
-		<About />
+		<HomeAbout />
 		<Services />
 		<HowItWorks />
 		<Testimonial />
