--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Navigation from '../components/Navigation.astro';
-import AboutBanner from '../components/AboutBanner.astro';
+import AboutLicense from '../components/AboutLicense.astro';
+import AboutBelieve from '../components/AboutBelieve.astro';
 import AboutShowcase from '../components/AboutShowcase.astro';
 import AboutPrinciple from '../components/AboutPrinciple.astro';
 import AboutTeam from '../components/AboutTeam.astro';
@@ -10,10 +11,11 @@ import Footer from '../components/Footer.astro';
 // import LineAnimation from '../components/LineAnimation.astro'; // Temporarily disabled
 ---
 
-<Layout title="关于我们 - MMC 财务规划" description="了解MMC财务规划的专业团队和使命，我们致力于帮助企业实现收入利润双增长。">
+<Layout title="关于我们 - MMC Financial 财务规划" description="了解MMC Financial财务规划的专业团队和使命，我们致力于帮助企业实现收入利润双增长。">
   <Navigation />
   <main>
-    <AboutBanner />
+    <AboutLicense />
+    <AboutBelieve />
     <AboutShowcase />
     <AboutPrinciple />
     <AboutTeam />
