Refactor components and update page structure - reorganize components into sections, add new UI components, update pages with new structure

--- a/src/components/sections/AboutTeam.astro
+++ b/src/components/sections/AboutTeam.astro
@@ -67,7 +67,7 @@
         />
         <div class="absolute bottom-0 left-0 z-20 w-full p-8 text-white transition-all duration-300 md:-bottom-14 group-hover:md:bottom-0">
           <h3 class="text-lg/snug text-inherit opacity-90">Jing Er Lim</h3>
-          <p class="mt-2 text-sm text-inherit opacity-90">Business Development Manager</p>
+          <p class="mt-2 text-sm text-inherit opacity-90">Business Development</p>
         </div>
       </div>
       
