--- a/src/components/sections/Services.astro
+++ b/src/components/sections/Services.astro
@@ -1,8 +1,8 @@
 ---
 // Services section component based on AstroBackup design
 // Import shared services data
-import ServiceCard from './ServiceCard.astro';
-import { homeServicesData } from '../data/services';
+import ServiceCard from '../ui/ServiceCard.astro';
+import { homeServicesData } from '../../data/services';
 import "swiper/css/bundle";
 ---
 
