--- a/src/components/ui/Footer.astro
+++ b/src/components/ui/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import SocialComponent from "./Social.astro";
-import social from "../config/social.json";
+import social from "../../config/social.json";
 
 // Footer menu data
 const quickLinks = [
