--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navigation from '../components/Navigation.astro';
-import AboutLicense from '../components/AboutLicense.astro';
-import AboutBelieve from '../components/AboutBelieve.astro';
-import AboutShowcase from '../components/AboutShowcase.astro';
-import AboutPrinciple from '../components/AboutPrinciple.astro';
-import AboutTeam from '../components/AboutTeam.astro';
-import CallToAction from '../components/CallToAction.astro';
-import Footer from '../components/Footer.astro';
+import Navigation from '../components/ui/Navigation.astro';
+import AboutLicense from '../components/sections/AboutLicense.astro';
+import AboutBelieve from '../components/sections/AboutBelieve.astro';
+import AboutShowcase from '../components/sections/AboutShowcase.astro';
+import AboutPrinciple from '../components/sections/AboutPrinciple.astro';
+import AboutTeam from '../components/sections/AboutTeam.astro';
+import CallToAction from '../components/sections/CallToAction.astro';
+import Footer from '../components/ui/Footer.astro';
 // import LineAnimation from '../components/LineAnimation.astro'; // Temporarily disabled
 ---
 
