--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-import Navigation from '../../components/Navigation.astro';
-import Footer from '../../components/Footer.astro';
-import CallToAction from '../../components/CallToAction.astro';
-import ServiceCard from '../../components/ServiceCard.astro';
+import Navigation from '../../components/ui/Navigation.astro';
+import Footer from '../../components/ui/Footer.astro';
+import CallToAction from '../../components/sections/CallToAction.astro';
+import ServiceCard from '../../components/ui/ServiceCard.astro';
 import { servicesData } from '../../data/services';
 ---
 
