--- a/src/pages/services/serviceexample.astro
+++ b/src/pages/services/serviceexample.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from '../../layouts/Layout.astro';
-  import Navigation from '../../components/Navigation.astro';
-  import Footer from '../../components/Footer.astro';
-  import HowItWorks from '../../components/HowItWorks.astro';
+  import Navigation from '../../components/ui/Navigation.astro';
+  import Footer from '../../components/ui/Footer.astro';
+  import HowItWorks from '../../components/sections/HowItWorks.astro';
 ---
 
 <Layout title="Brand Positioning and Messaging - MMC" description="Unify Your Voice. Stand Out From The Crowd. Drive Brand Recognition.">
